--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0",
+    "react-toastify": "^10.0.5",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
