--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.0",
     "react-toastify": "^10.0.5",
+    "use-debounce": "^10.0.2",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
